Issue #9246: On POSIX, os.getcwd() now supports paths longer than 1025 bytes

Patch written by William Orr.